# artifacts/api-server/src/controllers/feedController.ts
@@ -19,6 +19,7 @@ export async function feedHandler(req: Request, res: Response) {
       furnished: query.furnished,
       offerType: query.offer_type,
       rentalTerm: query.rental_term,
+      marketCountry: query.market_country,
       fuelType: query.fuel_type,
       transmission: query.transmission,
       brand: query.brand,
@@ -27,6 +28,7 @@ export async function feedHandler(req: Request, res: Response) {
       maxYear: query.max_year,
       industry: query.industry,
       originType: query.origin_type,
+      material: query.material,
       isRequest: query.is_request,
       sessionId: query.session_id,
       userId: req.userId,
